--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -12,6 +12,7 @@ jobs:
     name: Update npm dependencies
     runs-on: ubuntu-latest
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@gh-actions
       - name: Update dependencies
         id: update_deps
         uses: technote-space/create-pr-action@v1
