--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Auto Cancel Redundant Workflow
 
-description: GitHub Actions to automatically cancel redundant workflows.
+description: GitHub Actions to automatically cancel redundant workflow.
 
 author: technote-space
 
