--- a/.github/workflows/sync-workflows.yml
+++ b/.github/workflows/sync-workflows.yml
@@ -5,6 +5,9 @@ on:
     types: [sync-workflows]
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+
 name: Sync workflows
 jobs:
   release:
